syntax = "proto3";
package Cratis.Chronicle.Contracts.Seeding;
import "google/protobuf/empty.proto";

message SeedRequest {
   string EventStore = 1;
   string Namespace = 2;
   repeated SeedingEntry Entries = 3;
}
message SeedingEntry {
   string EventSourceId = 1;
   string EventTypeId = 2;
   string Content = 3;
}
service EventSeeding {
   rpc Seed (SeedRequest) returns (.google.protobuf.Empty);
}
